Add options to build runtime and common driver.

--- a/acquire-driver-common/CMakeLists.txt
+++ b/acquire-driver-common/CMakeLists.txt
@@ -1,4 +1,6 @@
-project(acquire-driver-common)
+if (BUILD_COMMON_DRIVER)
+    project(acquire-driver-common)
 
-add_subdirectory(src)
-add_subdirectory(tests)
+    add_subdirectory(src)
+    add_subdirectory(tests)
+endif ()
