--- a/acquire-video-runtime/CMakeLists.txt
+++ b/acquire-video-runtime/CMakeLists.txt
@@ -1,4 +1,6 @@
-project(acquire-video-runtime)
+if (BUILD_RUNTIME)
+    project(acquire-video-runtime)
 
-add_subdirectory(src)
-add_subdirectory(tests)
+    add_subdirectory(src)
+    add_subdirectory(tests)
+endif ()
