--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - "v*.*.*"
       - "nightly"
+  pull_request:
+    branches:
+      - main # TODO (aliddell): remove when we understand what's going on
 env:
   BUILD_TYPE: Release
 
@@ -173,10 +176,8 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    needs: # don't release if the tests are failing
-      - test-acquire-core-libs
-      - test-acquire-video-runtime
-      - test-acquire-driver-common
+    needs:
+      - build
     permissions: write-all
     steps:
       - uses: actions/checkout@v3
