--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,9 +5,7 @@ on:
     tags:
       - "v*.*.*"
       - "nightly"
-  pull_request:
-    branches:
-      - main # TODO (aliddell): remove when we understand what's going on
+
 env:
   BUILD_TYPE: Release
 
@@ -187,26 +185,22 @@ jobs:
         with:
           path: ${{ github.workspace }}/artifacts
 
-      - name: find out what's in the artifacts folder
-        run: ls ${{ github.workspace }}/artifacts
+      - name: Tagged release
+        if: ${{ github.ref_name != 'nightly' }}
+        uses: marvinpinto/action-automatic-releases@latest
+        with:
+          repo_token: ${{ github.token }}
+          prerelease: false
+          files: |
+            ${{steps.download.outputs.download-path}}/*/*.zip
 
-
-#      - name: Tagged release
-#        if: ${{ github.ref_name != 'nightly' }}
-#        uses: marvinpinto/action-automatic-releases@latest
-#        with:
-#          repo_token: ${{ github.token }}
-#          prerelease: false
-#          files: |
-#            ${{steps.download.outputs.download-path}}/*/*.zip
-#
-#      - name: Nightly release
-#        if: ${{ github.ref_name == 'nightly' }}
-#        uses: marvinpinto/action-automatic-releases@latest
-#        with:
-#          repo_token: ${{ secrets.PAT }}
-#          automatic_release_tag: "nightly"
-#          prerelease: true
-#          title: "Nightly Release"
-#          files: |
-#            ${{steps.download.outputs.download-path}}/*/*.zip
+      - name: Nightly release
+        if: ${{ github.ref_name == 'nightly' }}
+        uses: marvinpinto/action-automatic-releases@latest
+        with:
+          repo_token: ${{ secrets.PAT }}
+          automatic_release_tag: "nightly"
+          prerelease: true
+          title: "Nightly Release"
+          files: |
+            ${{steps.download.outputs.download-path}}/*/*.zip
