--- a/acquire-video-runtime/tests/CMakeLists.txt
+++ b/acquire-video-runtime/tests/CMakeLists.txt
@@ -28,6 +28,7 @@ else ()
             zero-config-start
             filter-video-average
             repeat-start-no-monitor
+            aligned-videoframe-pointers
     )
 
     foreach (name ${tests})
